@@ -3,6 +3,7 @@ Changes for 3.4.8rc1
 New features:
 
 Bug fixes:
+A......... [ZBX-6167] fixed partial updating in maintenance.update (ashubin)
 ...G...... [ZBX-13062] banned using of mutex in threads of metrics collection (MVekslers)
 ........S. [ZBX-13236] fixed error message of function parameters parse (MVekslers)
 ....I..... [ZBX-13398] fixed configure script for Debian GNU/Linux "buster" and "sid" to work with PostgreSQL (viktors)
@@ -1120,6 +1121,7 @@ Changes for 3.0.16rc1
 New features:
 
 Bug fixes:
+A......... [ZBX-6167] fixed partial updating in maintenance.update (ashubin)
 ...G...... [ZBX-13062] banned using of mutex in threads of metrics collection (MVekslers)
 
 --------------------------------------------------------------------------------
